[gd_scene load_steps=5 format=3 uid="uid://t4uuli5t1dls"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_mntdo"]
[ext_resource type="Texture2D" uid="uid://bnx05viaombt1" path="res://Assets/Baner.png" id="2_klq6n"]
[ext_resource type="Theme" uid="uid://bkym534illgg5" path="res://maintheme.tres" id="3_5dxee"]
[ext_resource type="FontFile" uid="uid://dubmjb327whkn" path="res://Assets/GameDevMarketBundle/rpg-ui-pack/FantasyRPGtitle (size 11).ttf" id="3_at8lx"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mntdo")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.31818
offset_right = 4.31812
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_klq6n")
expand_mode = 3

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -314.0
offset_top = -282.0
offset_right = 314.0
offset_bottom = 282.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_at8lx")
theme_override_font_sizes/font_size = 64
text = "UniRPG"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_5dxee")
text = "Start"

[node name="CustomCharacterButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Personnaliser votre personnage"

[node name="QuitButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quitter le jeu"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/CustomCharacterButton" to="." method="_on_custom_character_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
